--- a/skill_analysis.ipynb
+++ b/skill_analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_skills = ['docker']"
+    "target_skills = ['nosql', 'cassandra', 'mongodb', 'hbase']"
    ]
   },
   {
@@ -68,22 +68,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>docker</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>8.09</td>\n",
-       "      <td>2.24</td>\n",
-       "      <td>12.59</td>\n",
-       "      <td>10.74</td>\n",
-       "      <td>6.69</td>\n",
-       "      <td>9.87</td>\n",
+       "      <th>nosql</th>\n",
+       "      <td>9.41</td>\n",
+       "      <td>14.04</td>\n",
+       "      <td>9.09</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>26.37</td>\n",
+       "      <td>17.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cassandra</th>\n",
+       "      <td>5.74</td>\n",
+       "      <td>9.38</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7.01</td>\n",
+       "      <td>6.45</td>\n",
+       "      <td>7.79</td>\n",
+       "      <td>7.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mongodb</th>\n",
+       "      <td>5.74</td>\n",
+       "      <td>8.61</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>7.08</td>\n",
+       "      <td>11.73</td>\n",
+       "      <td>4.37</td>\n",
+       "      <td>7.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hbase</th>\n",
+       "      <td>0.50</td>\n",
+       "      <td>9.59</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>7.45</td>\n",
+       "      <td>5.51</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>7.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Africa  Asia  Australia  Europe  North America  South America  Global\n",
-       "docker     0.5  8.09       2.24   12.59          10.74           6.69    9.87"
+       "           Africa   Asia  Australia  Europe  North America  South America  \\\n",
+       "nosql        9.41  14.04       9.09   18.75          21.25          26.37   \n",
+       "cassandra    5.74   9.38       0.00    7.01           6.45           7.79   \n",
+       "mongodb      5.74   8.61       0.50    7.08          11.73           4.37   \n",
+       "hbase        0.50   9.59       3.36    7.45           5.51           4.10   \n",
+       "\n",
+       "           Global  \n",
+       "nosql       17.32  \n",
+       "cassandra    7.16  \n",
+       "mongodb      7.63  \n",
+       "hbase        7.00  "
       ]
      },
      "execution_count": 3,
@@ -146,22 +185,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>docker</th>\n",
-       "      <td>73</td>\n",
-       "      <td>44</td>\n",
-       "      <td>68</td>\n",
-       "      <td>23</td>\n",
+       "      <th>nosql</th>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>38</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cassandra</th>\n",
+       "      <td>37</td>\n",
+       "      <td>38</td>\n",
+       "      <td>161</td>\n",
+       "      <td>46</td>\n",
+       "      <td>56</td>\n",
+       "      <td>32</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mongodb</th>\n",
+       "      <td>36</td>\n",
        "      <td>40</td>\n",
-       "      <td>40</td>\n",
+       "      <td>88</td>\n",
+       "      <td>45</td>\n",
        "      <td>34</td>\n",
+       "      <td>54</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hbase</th>\n",
+       "      <td>72</td>\n",
+       "      <td>36</td>\n",
+       "      <td>66</td>\n",
+       "      <td>42</td>\n",
+       "      <td>59</td>\n",
+       "      <td>56</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Africa  Asia  Australia  Europe  North America  South America  Global\n",
-       "docker      73    44         68      23             40             40      34"
+       "           Africa  Asia  Australia  Europe  North America  South America  \\\n",
+       "nosql          21    21         38      16             13             12   \n",
+       "cassandra      37    38        161      46             56             32   \n",
+       "mongodb        36    40         88      45             34             54   \n",
+       "hbase          72    36         66      42             59             56   \n",
+       "\n",
+       "           Global  \n",
+       "nosql          16  \n",
+       "cassandra      46  \n",
+       "mongodb        42  \n",
+       "hbase          47  "
       ]
      },
      "execution_count": 4,
@@ -220,27 +298,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>docker</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.96</td>\n",
-       "      <td>12.77</td>\n",
-       "      <td>8.62</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>11.94</td>\n",
-       "      <td>9.87</td>\n",
+       "      <th>nosql</th>\n",
+       "      <td>12.00</td>\n",
+       "      <td>13.64</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>19.30</td>\n",
+       "      <td>21.80</td>\n",
+       "      <td>12.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.53</td>\n",
+       "      <td>17.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cassandra</th>\n",
+       "      <td>0.67</td>\n",
+       "      <td>5.79</td>\n",
+       "      <td>10.11</td>\n",
+       "      <td>7.10</td>\n",
+       "      <td>5.48</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>7.10</td>\n",
+       "      <td>7.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mongodb</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>9.24</td>\n",
+       "      <td>9.24</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>7.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hbase</th>\n",
+       "      <td>5.33</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>9.12</td>\n",
+       "      <td>7.35</td>\n",
+       "      <td>6.36</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.76</td>\n",
+       "      <td>7.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Internship  Entry level  Associate  Mid-Senior  Senior  Director  \\\n",
-       "docker         2.0         5.96      12.77        8.62    16.1      1.44   \n",
+       "           Internship  Entry level  Associate  Mid-Senior  Senior  Director  \\\n",
+       "nosql           12.00        13.64      18.75       19.30   21.80     12.95   \n",
+       "cassandra        0.67         5.79      10.11        7.10    5.48      0.36   \n",
+       "mongodb          2.00         6.50       8.12        9.24    9.24      0.00   \n",
+       "hbase            5.33         5.40       9.12        7.35    6.36      0.00   \n",
        "\n",
-       "        Executive  Not specified  Global  \n",
-       "docker       70.0          11.94    9.87  "
+       "           Executive  Not specified  Global  \n",
+       "nosql            0.0          14.53   17.32  \n",
+       "cassandra       30.0           7.10    7.16  \n",
+       "mongodb          0.0           4.25    7.63  \n",
+       "hbase            0.0           7.76    7.00  "
       ]
      },
      "execution_count": 5,
@@ -304,26 +424,65 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>docker</th>\n",
+       "      <th>nosql</th>\n",
+       "      <td>22</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cassandra</th>\n",
+       "      <td>67</td>\n",
        "      <td>52</td>\n",
+       "      <td>36</td>\n",
+       "      <td>51</td>\n",
+       "      <td>56</td>\n",
+       "      <td>101</td>\n",
+       "      <td>24</td>\n",
        "      <td>47</td>\n",
-       "      <td>25</td>\n",
-       "      <td>42</td>\n",
-       "      <td>20</td>\n",
-       "      <td>68</td>\n",
-       "      <td>3</td>\n",
-       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mongodb</th>\n",
+       "      <td>49</td>\n",
+       "      <td>44</td>\n",
+       "      <td>43</td>\n",
+       "      <td>41</td>\n",
+       "      <td>33</td>\n",
+       "      <td>128</td>\n",
+       "      <td>97</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hbase</th>\n",
+       "      <td>35</td>\n",
+       "      <td>56</td>\n",
+       "      <td>40</td>\n",
+       "      <td>48</td>\n",
+       "      <td>47</td>\n",
+       "      <td>148</td>\n",
+       "      <td>127</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Internship  Entry level  Associate  Mid-Senior  Senior  Director  \\\n",
-       "docker          52           47         25          42      20        68   \n",
+       "           Internship  Entry level  Associate  Mid-Senior  Senior  Director  \\\n",
+       "nosql              22           18         18          15      14        23   \n",
+       "cassandra          67           52         36          51      56       101   \n",
+       "mongodb            49           44         43          41      33       128   \n",
+       "hbase              35           56         40          48      47       148   \n",
        "\n",
-       "        Executive  Not specified  \n",
-       "docker          3             32  "
+       "           Executive  Not specified  \n",
+       "nosql             94             23  \n",
+       "cassandra         24             47  \n",
+       "mongodb           97             60  \n",
+       "hbase            127             43  "
       ]
      },
      "execution_count": 6,
